update full project and add license

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Biuro Projektów Metroprojekt sp. z o.o. jest firmą z 70-letnią tradycją w projektowaniu obiektów kubaturowych, infrastruktury transportowej, instalacji i systemów kolejowych oraz metra. Świadczymy usługi projektowe dla inwestorów, wykonawców budowlanych oraz współpracujemy z innymi biurami projektowymi.">
+    <meta name="keywords" content="metroprojekt, metro, srk, sterowanie ruchem kolejowym">
     <!-- Page Icon -->
     <link rel="icon" href="./img/icon.jpg">
     <!-- External CSS -->
@@ -14,7 +16,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600&display=swap" rel="stylesheet">
     <!-- Title -->
-    <title>Biuro Projektów Metroprojekt</title>
+    <title>Biuro Projektów Metroprojekt sp. z o.o.</title>
 </head>
 
 <body>
@@ -37,21 +39,29 @@
                         <li><a href="#co_nas_wyroznia" class="menuListItem menuListAnchorClose">Co nas wyróżnia</a></li>
                         <li><a href="#historia_firmy" class="menuListItem menuListAnchorClose">Historia firmy</a></li>
                         <li><a href="#kadra" class="menuListItem menuListAnchorClose">Kadra</a></li>
-                        <li><a href="#nagrody_certyfikaty" class="menuListItem menuListAnchorClose">Nagrody i certyfikaty</a></li>
+                        <li><a href="#nagrody_certyfikaty" class="menuListItem menuListAnchorClose">Nagrody i
+                                certyfikaty</a></li>
                     </ul>
                 </li>
                 <!-- Nav list - Services -->
                 <li class="menuListFirstLine menuListDrop">
                     <a href="#" class="menuListItem expandList first">Oferta<i class="fas fa-angle-down"></i></a>
                     <ul class="menuListDrop-menu expand long">
-                        <li><a href="systemy-sterowania-ruchem-kolejowym.html" class="menuListItem">Systemy sterowania ruchem kolejowym</a></li>
-                        <li><a href="systemy-metra-i-szybkiego-tramwaju.html" class="menuListItem">Systemy metra i szybkiego tramwaju</a></li>
-                        <li><a href="infrastruktura-kolejowa-i-drogowa.html" class="menuListItem">Infrastruktura kolejowa i drogowa</a></li>
+                        <li><a href="systemy-sterowania-ruchem-kolejowym.html" class="menuListItem">Systemy sterowania
+                                ruchem kolejowym</a></li>
+                        <li><a href="systemy-metra-i-szybkiego-tramwaju.html" class="menuListItem">Systemy metra i
+                                szybkiego tramwaju</a></li>
+                        <li><a href="infrastruktura-kolejowa-i-drogowa.html" class="menuListItem">Infrastruktura
+                                kolejowa i drogowa</a></li>
                         <li><a href="uklady-komunikacyjne.html" class="menuListItem">Układy komunikacyjne</a></li>
-                        <li><a href="sieci-i-instalacje-wodnokanalizacyjne.html" class="menuListItem">Sieci i instalacje wodno-kanalizacyjne</a></li>
-                        <li><a href="konstrukcje-budowlane-i-inzynierskie.html" class="menuListItem">Konstrukcje budowlane i inżynierskie</a></li>
-                        <li><a href="sieci-i-instalacje-elektroenergetyczne.html" class="menuListItem">Sieci i instalacje elektroenergetyczne i automatyki przemysłowej</a></li>
-                        <li><a href="inwestorstwo-zastepcze-ekspertyzy.html" class="menuListItem">Inwestorstwo zastępcze, ekspertyzy i opinie techniczne</a></li>
+                        <li><a href="sieci-i-instalacje-wodnokanalizacyjne.html" class="menuListItem">Sieci i instalacje
+                                wodno-kanalizacyjne</a></li>
+                        <li><a href="konstrukcje-budowlane-i-inzynierskie.html" class="menuListItem">Konstrukcje
+                                budowlane i inżynierskie</a></li>
+                        <li><a href="sieci-i-instalacje-elektroenergetyczne.html" class="menuListItem">Sieci i
+                                instalacje elektroenergetyczne i automatyki przemysłowej</a></li>
+                        <li><a href="inwestorstwo-zastepcze-ekspertyzy.html" class="menuListItem">Inwestorstwo
+                                zastępcze, ekspertyzy i opinie techniczne</a></li>
                     </ul>
                 </li>
                 <!-- Nav list - References -->
@@ -63,11 +73,13 @@
                     <a href="#" class="menuListItem expandList first">Współpraca<i class="fas fa-angle-down"></i></a>
                     <ul class="menuListDrop-menu expand">
                         <li class="menuListDrop menuListDrop-right">
-                            <a href="#" class="menuListItem expandList">Nasi partnerzy<i class="fas fa-angle-right"></i></a>
+                            <a href="#" class="menuListItem expandList">Nasi partnerzy<i
+                                    class="fas fa-angle-right"></i></a>
                             <ul class="menuListRight expand">
                                 <li><a href="nasi-klienci.html" class="menuListItem">Nasi klienci</a></li>
                                 <li><a href="kontrahenci.html" class="menuListItem">Kontrahenci</a></li>
-                                <li><a href="jednostki-naukowo-badawcze.html" class="menuListItem">Jednostki naukowo-badawcze</a></li>
+                                <li><a href="jednostki-naukowo-badawcze.html" class="menuListItem">Jednostki
+                                        naukowo-badawcze</a></li>
                             </ul>
                         </li>
                         <li><a href="mozliwosci-wspolpracy.html" class="menuListItem">Możliwości współpracy</a></li>
@@ -91,8 +103,11 @@
                 </li>
             </ul>
         </nav>
-        <h1 class="h1OverImg"><span>Świadczymy kompleksowe</span><br><span> usługi projektowe od 1951 roku.</span></h1>
-        <img class="yearsimg" src="./img/70 LAT TRADYCJI_białe.png" alt="">
+        <div>
+            <h1 class="h1OverImg"><span>Świadczymy kompleksowe</span><br><span> usługi projektowe od 1951 roku</span>
+            </h1>
+            <a class="button03" href="#onas">Dowiedz się więcej >></a>
+        </div>
     </header>
 
     <!-- Button Section -->
@@ -128,7 +143,7 @@
         <div class="containerLabels">
             <div class="citem">
                 <div class="containerLabels_Img">
-                    <img src="./icons/20210326_BPM-61.png" alt="" width="100px">
+                    <img src="./img/20210326_BPM-61.png" alt="" width="100px">
                 </div>
                 <div class="containerLabels_Text">
                     <p>
@@ -138,7 +153,7 @@
             </div>
             <div class="citem">
                 <div class="containerLabels_Img">
-                    <img src="./icons/20210326_BPM-61.png" alt="" width="100px">
+                    <img src="./img/20210326_BPM-61.png" alt="" width="100px">
                 </div>
                 <div class="containerLabels_Text">
                     <p>
@@ -148,7 +163,7 @@
             </div>
             <div class="citem">
                 <div class="containerLabels_Img">
-                    <img src="./icons/20210326_BPM-61.png" alt="" width="100px">
+                    <img src="./img/20210326_BPM-61.png" alt="" width="100px">
                 </div>
                 <div class="containerLabels_Text">
                     <p>
@@ -158,7 +173,7 @@
             </div>
             <div class="citem">
                 <div class="containerLabels_Img">
-                    <img src="./icons/20210326_BPM-61.png" alt="" width="100px">
+                    <img src="./img/20210326_BPM-61.png" alt="" width="100px">
                 </div>
                 <div class="containerLabels_Text">
                     <p>
@@ -168,7 +183,7 @@
             </div>
             <div class="citem">
                 <div class="containerLabels_Img">
-                    <img src="./icons/20210326_BPM-61.png" alt="" width="100px">
+                    <img src="./img/20210326_BPM-61.png" alt="" width="100px">
                 </div>
                 <div class="containerLabels_Text">
                     <p>
@@ -178,7 +193,7 @@
             </div>
             <div class="citem">
                 <div class="containerLabels_Img">
-                    <img src="./icons/20210326_BPM-61.png" alt="" width="100px">
+                    <img src="./img/20210326_BPM-61.png" alt="" width="100px">
                 </div>
                 <div class="containerLabels_Text">
                     <p>
@@ -237,7 +252,7 @@
             <div class="peopleitem">
                 <a href="systemy-sterowania-ruchem-kolejowym.html">
                     <div class="peoplecontainerLabels_Img">
-                        <img src="./icons/20210326_BPM-64.png" alt="" width="140px">
+                        <img src="./img/20210326_BPM-64.png" alt="" width="140px">
                     </div>
                     <div class="peopleLabels_Text">
                         <p>
@@ -250,7 +265,7 @@
             <div class="peopleitem">
                 <a href="systemy-metra-i-szybkiego-tramwaju.html">
                     <div class="peoplecontainerLabels_Img">
-                        <img src="./icons/20210326_BPM-63.png" alt="" width="140px">
+                        <img src="./img/20210326_BPM-63.png" alt="" width="140px">
                     </div>
                     <div class="peopleLabels_Text">
                         <p>
@@ -262,7 +277,7 @@
             <div class="peopleitem">
                 <a href="infrastruktura-kolejowa-i-drogowa.html">
                     <div class="peoplecontainerLabels_Img">
-                        <img src="./icons/20210326_BPM-62.png" alt="" width="140px">
+                        <img src="./img/20210326_BPM-62.png" alt="" width="140px">
                     </div>
                     <div class="peopleLabels_Text">
                         <p>
@@ -274,7 +289,7 @@
             <div class="peopleitem">
                 <a href="uklady-komunikacyjne.html">
                     <div class="peoplecontainerLabels_Img">
-                        <img src="./icons/20210326_BPM-65.png" alt="" width="140px">
+                        <img src="./img/20210326_BPM-65.png" alt="" width="140px">
                     </div>
                     <div class="peopleLabels_Text">
                         <p>
@@ -286,7 +301,7 @@
             <div class="peopleitem">
                 <a href="sieci-i-instalacje-wodnokanalizacyjne.html">
                     <div class="peoplecontainerLabels_Img">
-                        <img src="./icons/20210326_BPM-68.png" alt="" width="140px">
+                        <img src="./img/20210326_BPM-68.png" alt="" width="140px">
                     </div>
                     <div class="peopleLabels_Text">
                         <p>
@@ -298,7 +313,7 @@
             <div class="peopleitem">
                 <a href="konstrukcje-budowlane-i-inzynierskie.html">
                     <div class="peoplecontainerLabels_Img">
-                        <img src="./icons/20210326_BPM-66.png" alt="" width="140px">
+                        <img src="./img/20210326_BPM-66.png" alt="" width="140px">
                     </div>
                     <div class="peopleLabels_Text">
                         <p>
@@ -310,7 +325,7 @@
             <div class="peopleitem">
                 <a href="sieci-i-instalacje-elektroenergetyczne.html">
                     <div class="peoplecontainerLabels_Img">
-                        <img src="./icons/20210326_BPM-67.png" alt="" width="140px">
+                        <img src="./img/20210326_BPM-67.png" alt="" width="140px">
                     </div>
                     <div class="peopleLabels_Text">
                         <p>
@@ -322,7 +337,7 @@
             <div class="peopleitem">
                 <a href="inwestorstwo-zastepcze-ekspertyzy.html">
                     <div class="peoplecontainerLabels_Img">
-                        <img src="./icons/20210326_BPM-69.png" alt="" width="140px">
+                        <img src="./img/20210326_BPM-69.png" alt="" width="140px">
                     </div>
                     <div class="peopleLabels_Text">
                         <p>
@@ -347,8 +362,8 @@
             <div class="prizeitem">
                 <div class="prizeLabels_Text">
                     <p><strong>
-                        Medal "IV Wieki Stołeczności Warszawy"
-                    </strong></p>
+                            Medal "IV Wieki Stołeczności Warszawy"
+                        </strong></p>
                     <p class="prizeLabels_Text_p">
                         W 1996 roku, z okazji jubileuszu czterechsetlecia stołeczności Warszawy zostaliśmy uhonorowani medalem pamiątkowym za nasz wieloletni wkład w rozwój stolicy.
                     </p>
@@ -360,8 +375,8 @@
             <div class="prizeitem">
                 <div class="prizeLabels_Text">
                     <p><strong>
-                        Wyróżnienie "Zasłużony dla Warszawy"
-                    </strong></p>
+                            Wyróżnienie "Zasłużony dla Warszawy"
+                        </strong></p>
                     <p class="prizeLabels_Text_p">
                         Otrzymaliśmy wyróżnienie, które przyznawane jest osobom fizycznym oraz jednostkom organizacyjnym wyróżniającym się działalnością na rzecz Warszawy, w szczególności w sferze społecznej, naukowej i edukacyjnej.
                     </p>
@@ -373,8 +388,8 @@
             <div class="prizeitem">
                 <div class="prizeLabels_Text">
                     <p><strong>
-                        "Zasłużony dla Budownictwa i Przemysłu Materiałów Budowlanych"
-                    </strong></p>
+                            "Zasłużony dla Budownictwa i Przemysłu Materiałów Budowlanych"
+                        </strong></p>
                     <p class="prizeLabels_Text_p">
                         Otrzymaliśmy odznaczenie nadawane przez Ministra Budownictwa i Przemysłu Materiałów Budowlanych, w uznaniu za naszą wieloletnią, aktywną pracę zawodową i działalność oraz zasługi dla rozwoju budownictwa i przemysłu materiałów budowlanych.
                     </p>
@@ -399,7 +414,7 @@
             </div>
         </div>
         <div class="footerCopyright">
-            Copyright © 2021 - Biuro Projektów "Metroprojekt" sp. z o.o.
+            Copyright © <span class="footerYear"></span> - Biuro Projektów "Metroprojekt" sp. z o.o.
         </div>
     </footer>
 
