--- a/mozliwosci-wspolpracy.html
+++ b/mozliwosci-wspolpracy.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Biuro Projektów Metroprojekt sp. z o.o. jest firmą z 70-letnią tradycją w projektowaniu obiektów kubaturowych, infrastruktury transportowej, instalacji i systemów kolejowych oraz metra. Świadczymy usługi projektowe dla inwestorów, wykonawców budowlanych oraz współpracujemy z innymi biurami projektowymi.">
+    <meta name="keywords" content="metroprojekt, metro, srk, sterowanie ruchem kolejowym">
     <!-- Page Icon -->
     <link rel="icon" href="./img/icon.jpg">
     <!-- External CSS -->
@@ -16,7 +18,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600&display=swap" rel="stylesheet">
     <!-- Title -->
-    <title>Biuro Projektów Metroprojekt</title>
+    <title>Biuro Projektów Metroprojekt sp. z o.o.</title>
 </head>
 
 <body>
@@ -39,14 +41,21 @@
                 <li class="menuListFirstLine menuListDrop">
                     <a href="#" class="menuListItem expandList first">Oferta<i class="fas fa-angle-down"></i></a>
                     <ul class="menuListDrop-menu expand long">
-                        <li><a href="systemy-sterowania-ruchem-kolejowym.html" class="menuListItem">Systemy sterowania ruchem kolejowym</a></li>
-                        <li><a href="systemy-metra-i-szybkiego-tramwaju.html" class="menuListItem">Systemy metra i szybkiego tramwaju</a></li>
-                        <li><a href="infrastruktura-kolejowa-i-drogowa.html" class="menuListItem">Infrastruktura kolejowa i drogowa</a></li>
+                        <li><a href="systemy-sterowania-ruchem-kolejowym.html" class="menuListItem">Systemy sterowania
+                                ruchem kolejowym</a></li>
+                        <li><a href="systemy-metra-i-szybkiego-tramwaju.html" class="menuListItem">Systemy metra i
+                                szybkiego tramwaju</a></li>
+                        <li><a href="infrastruktura-kolejowa-i-drogowa.html" class="menuListItem">Infrastruktura
+                                kolejowa i drogowa</a></li>
                         <li><a href="uklady-komunikacyjne.html" class="menuListItem">Układy komunikacyjne</a></li>
-                        <li><a href="sieci-i-instalacje-wodnokanalizacyjne.html" class="menuListItem">Sieci i instalacje wodno-kanalizacyjne</a></li>
-                        <li><a href="konstrukcje-budowlane-i-inzynierskie.html" class="menuListItem">Konstrukcje budowlane i inżynierskie</a></li>
-                        <li><a href="sieci-i-instalacje-elektroenergetyczne.html" class="menuListItem">Sieci i instalacje elektroenergetyczne i automatyki przemysłowej</a></li>
-                        <li><a href="inwestorstwo-zastepcze-ekspertyzy.html" class="menuListItem">Inwestorstwo zastępcze, ekspertyzy i opinie techniczne</a></li>
+                        <li><a href="sieci-i-instalacje-wodnokanalizacyjne.html" class="menuListItem">Sieci i instalacje
+                                wodno-kanalizacyjne</a></li>
+                        <li><a href="konstrukcje-budowlane-i-inzynierskie.html" class="menuListItem">Konstrukcje
+                                budowlane i inżynierskie</a></li>
+                        <li><a href="sieci-i-instalacje-elektroenergetyczne.html" class="menuListItem">Sieci i
+                                instalacje elektroenergetyczne i automatyki przemysłowej</a></li>
+                        <li><a href="inwestorstwo-zastepcze-ekspertyzy.html" class="menuListItem">Inwestorstwo
+                                zastępcze, ekspertyzy i opinie techniczne</a></li>
                     </ul>
                 </li>
                 <!-- Nav list - References -->
@@ -58,11 +67,13 @@
                     <a href="#" class="menuListItem expandList first">Współpraca<i class="fas fa-angle-down"></i></a>
                     <ul class="menuListDrop-menu expand">
                         <li class="menuListDrop menuListDrop-right">
-                            <a href="#" class="menuListItem expandList">Nasi partnerzy<i class="fas fa-angle-right"></i></a>
+                            <a href="#" class="menuListItem expandList">Nasi partnerzy<i
+                                    class="fas fa-angle-right"></i></a>
                             <ul class="menuListRight expand">
                                 <li><a href="nasi-klienci.html" class="menuListItem">Nasi klienci</a></li>
                                 <li><a href="kontrahenci.html" class="menuListItem">Kontrahenci</a></li>
-                                <li><a href="jednostki-naukowo-badawcze.html" class="menuListItem">Jednostki naukowo-badawcze</a></li>
+                                <li><a href="jednostki-naukowo-badawcze.html" class="menuListItem">Jednostki
+                                        naukowo-badawcze</a></li>
                             </ul>
                         </li>
                         <li><a href="mozliwosci-wspolpracy.html" class="menuListItem">Możliwości współpracy</a></li>
@@ -92,9 +103,13 @@
     <!-- Section 01 -->
     <section class="whiteSection">
         <p>
-            Biuro Projektów "Metroprojekt" sp. z o.o. jest otwarte na szeroką współpracę we wszystkich obszarach prowadzonej przez siebie działalności. W szczególności zachęcamy do wspólnych działań w zakresie:<br><br> <span class="lispan">projektowania nowych typów urządzeń i systemów
-            sterowania ruchem i zarządzania infrastrukturą</span><br> <span class="lispan">projektowania obiektów nietypowych, rozwiązań specjalizowanych, cyfrowych systemów sterowania i kontroli</span><br> <span class="lispan">testowania urządzeń i systemów sterowania ruchem</span><br>            <span class="lispan">analiz ruchowych
-            oraz ekonomiczno-finansowych inwestycji infrastrukturalnych</span><br> <span class="lispan">nadzorów autorskich i pełnienia funkcji inwestora zastępczego</span>
+            Biuro Projektów "Metroprojekt" sp. z o.o. jest otwarte na szeroką współpracę we wszystkich obszarach prowadzonej przez siebie działalności. W szczególności zachęcamy do wspólnych działań w zakresie:<br><br>
+            <span class="lispan">projektowania nowych typów urządzeń i systemów
+                sterowania ruchem i zarządzania infrastrukturą</span><br> <span class="lispan">projektowania obiektów
+                nietypowych, rozwiązań specjalizowanych, cyfrowych systemów sterowania i kontroli</span><br> <span class="lispan">testowania urządzeń i systemów sterowania ruchem</span><br> <span class="lispan">analiz
+                ruchowych
+                oraz ekonomiczno-finansowych inwestycji infrastrukturalnych</span><br> <span class="lispan">nadzorów
+                autorskich i pełnienia funkcji inwestora zastępczego</span>
         </p>
         <p>
             Zachęcamy do współpracy wszystkie podmioty, które poszukują solidnego partnera w projektach inwestycyjnych wymagających specjalistycznej wiedzy i niecodziennych rozwiązań funkcjonalno-technicznych. Nasz zespół zapewni obsługę inwestycji od początku do
@@ -109,8 +124,15 @@
             uczelnie wyższe i instytuty naukowe do nawiązania kontaktu, który może przerodzić się w stałą współpracę, projekty pilotażowe i docelowe wdrożenie na sieci kolejowej.
         </p>
         <p>
-            Jesteśmy otwarci na współpracę w obszarach:<br><br> <span class="lispan">nowoczesnych metod projektowania i wytwarzania urządzeń i systemów sterowania ruchem</span><br> <span class="lispan">cyfrowych systemów sterowania, systemu ERTMS/ETCS, systemów CBTC</span><br>            <span class="lispan">modułowej architektury
-            systemów sterowania i automatyki przemysłowej</span><br> <span class="lispan">diagnostyki infrastruktury i systemów sterowania ruchem</span><br> <span class="lispan">specjalizowanych rozwiązań w dziedzinie transportu i infrastruktury technicznej</span><br>            <span class="lispan">nietypowych konstrukcji i obiektów inżynierskich</span><br><span class="lispan">innowacyjnych materiałów i ich zastosowania w budownictwie drogowym i kolejowym</span><br> <span class="lispan">zaawansowanych systemów teleinformatycznych i elektroenergetycznych</span>
+            Jesteśmy otwarci na współpracę w obszarach:<br><br> <span class="lispan">nowoczesnych metod projektowania i
+                wytwarzania urządzeń i systemów sterowania ruchem</span><br> <span class="lispan">cyfrowych systemów
+                sterowania, systemu ERTMS/ETCS, systemów CBTC</span><br> <span class="lispan">modułowej architektury
+                systemów sterowania i automatyki przemysłowej</span><br> <span class="lispan">diagnostyki infrastruktury
+                i systemów sterowania ruchem</span><br> <span class="lispan">specjalizowanych rozwiązań w dziedzinie
+                transportu i infrastruktury technicznej</span><br> <span class="lispan">nietypowych konstrukcji i
+                obiektów inżynierskich</span><br><span class="lispan">innowacyjnych materiałów i ich zastosowania w
+                budownictwie drogowym i kolejowym</span><br> <span class="lispan">zaawansowanych systemów
+                teleinformatycznych i elektroenergetycznych</span>
         </p>
     </section>
     <section class="whiteSection">
@@ -133,7 +155,7 @@
             </div>
         </div>
         <div class="footerCopyright">
-            Copyright © 2021 - Biuro Projektów "Metroprojekt" sp. z o.o.
+            Copyright © <span class="footerYear"></span> - Biuro Projektów "Metroprojekt" sp. z o.o.
         </div>
     </footer>
 
