--- a/referencje.html
+++ b/referencje.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Biuro Projektów Metroprojekt sp. z o.o. jest firmą z 70-letnią tradycją w projektowaniu obiektów kubaturowych, infrastruktury transportowej, instalacji i systemów kolejowych oraz metra. Świadczymy usługi projektowe dla inwestorów, wykonawców budowlanych oraz współpracujemy z innymi biurami projektowymi.">
+    <meta name="keywords" content="metroprojekt, metro, srk, sterowanie ruchem kolejowym">
     <!-- Page Icon -->
     <link rel="icon" href="./img/icon.jpg">
     <!-- External CSS -->
@@ -14,7 +16,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600&display=swap" rel="stylesheet">
     <!-- Title -->
-    <title>Biuro Projektów Metroprojekt</title>
+    <title>Biuro Projektów Metroprojekt sp. z o.o.</title>
 </head>
 
 <body>
@@ -37,14 +39,21 @@
                 <li class="menuListFirstLine menuListDrop">
                     <a href="#" class="menuListItem expandList first">Oferta<i class="fas fa-angle-down"></i></a>
                     <ul class="menuListDrop-menu expand long">
-                        <li><a href="systemy-sterowania-ruchem-kolejowym.html" class="menuListItem">Systemy sterowania ruchem kolejowym</a></li>
-                        <li><a href="systemy-metra-i-szybkiego-tramwaju.html" class="menuListItem">Systemy metra i szybkiego tramwaju</a></li>
-                        <li><a href="infrastruktura-kolejowa-i-drogowa.html" class="menuListItem">Infrastruktura kolejowa i drogowa</a></li>
+                        <li><a href="systemy-sterowania-ruchem-kolejowym.html" class="menuListItem">Systemy sterowania
+                                ruchem kolejowym</a></li>
+                        <li><a href="systemy-metra-i-szybkiego-tramwaju.html" class="menuListItem">Systemy metra i
+                                szybkiego tramwaju</a></li>
+                        <li><a href="infrastruktura-kolejowa-i-drogowa.html" class="menuListItem">Infrastruktura
+                                kolejowa i drogowa</a></li>
                         <li><a href="uklady-komunikacyjne.html" class="menuListItem">Układy komunikacyjne</a></li>
-                        <li><a href="sieci-i-instalacje-wodnokanalizacyjne.html" class="menuListItem">Sieci i instalacje wodno-kanalizacyjne</a></li>
-                        <li><a href="konstrukcje-budowlane-i-inzynierskie.html" class="menuListItem">Konstrukcje budowlane i inżynierskie</a></li>
-                        <li><a href="sieci-i-instalacje-elektroenergetyczne.html" class="menuListItem">Sieci i instalacje elektroenergetyczne i automatyki przemysłowej</a></li>
-                        <li><a href="inwestorstwo-zastepcze-ekspertyzy.html" class="menuListItem">Inwestorstwo zastępcze, ekspertyzy i opinie techniczne</a></li>
+                        <li><a href="sieci-i-instalacje-wodnokanalizacyjne.html" class="menuListItem">Sieci i instalacje
+                                wodno-kanalizacyjne</a></li>
+                        <li><a href="konstrukcje-budowlane-i-inzynierskie.html" class="menuListItem">Konstrukcje
+                                budowlane i inżynierskie</a></li>
+                        <li><a href="sieci-i-instalacje-elektroenergetyczne.html" class="menuListItem">Sieci i
+                                instalacje elektroenergetyczne i automatyki przemysłowej</a></li>
+                        <li><a href="inwestorstwo-zastepcze-ekspertyzy.html" class="menuListItem">Inwestorstwo
+                                zastępcze, ekspertyzy i opinie techniczne</a></li>
                     </ul>
                 </li>
                 <!-- Nav list - References -->
@@ -56,11 +65,13 @@
                     <a href="#" class="menuListItem expandList first">Współpraca<i class="fas fa-angle-down"></i></a>
                     <ul class="menuListDrop-menu expand">
                         <li class="menuListDrop menuListDrop-right">
-                            <a href="#" class="menuListItem expandList">Nasi partnerzy<i class="fas fa-angle-right"></i></a>
+                            <a href="#" class="menuListItem expandList">Nasi partnerzy<i
+                                    class="fas fa-angle-right"></i></a>
                             <ul class="menuListRight expand">
                                 <li><a href="nasi-klienci.html" class="menuListItem">Nasi klienci</a></li>
                                 <li><a href="kontrahenci.html" class="menuListItem">Kontrahenci</a></li>
-                                <li><a href="jednostki-naukowo-badawcze.html" class="menuListItem">Jednostki naukowo-badawcze</a></li>
+                                <li><a href="jednostki-naukowo-badawcze.html" class="menuListItem">Jednostki
+                                        naukowo-badawcze</a></li>
                             </ul>
                         </li>
                         <li><a href="mozliwosci-wspolpracy.html" class="menuListItem">Możliwości współpracy</a></li>
@@ -91,49 +102,81 @@
     <section class="whiteSection">
         <h2 class="h2left">Metro i kolej</h2>
         <p class="referencesp">
-            <span class="lispan">Projekty metra warszawskiego - koncepcja i założenia techniczno-ekonomiczne dla całej I linii,</span><br>
-            <span class="lispan">Projekt kompleksowy stacji techniczno-postojowej Kabaty dla I linii metra w Warszawie,</span><br>
-            <span class="lispan">Program funkcjonalno-użytkowy dla przebudowy układu torowego głowicy zachodniej, wraz z przebudową wyjazdów z elektrowozowni na STP Kabaty I linii metra w Warszawie,</span><br>
-            <span class="lispan">Projekty metra od Kabat do stacji "Świętokrzyska” (stacje i tunele szlakowe),</span><br>
-            <span class="lispan">Projekty tuneli szlakowych od stacji "Świętokrzyska" do stacji "Słodowiec" oraz od stacji „Stare Bielany” do stacji „Młociny”,</span><br>
-            <span class="lispan">Projekty stacji I linii metra w Warszawie: "Pl. Wilsona", „Wawrzyszew” i „Młociny” wraz z torami odstawczymi,</span><br>
-            <span class="lispan">Wielobranżowy projekt koncepcyjny II linii metra odc. centralny od Ronda Daszyńskiego do Dworca Wileńskiego,</span><br>
+            <span class="lispan">Projekty metra warszawskiego - koncepcja i założenia techniczno-ekonomiczne dla całej I
+                linii,</span><br>
+            <span class="lispan">Projekt kompleksowy stacji techniczno-postojowej Kabaty dla I linii metra w
+                Warszawie,</span><br>
+            <span class="lispan">Program funkcjonalno-użytkowy dla przebudowy układu torowego głowicy zachodniej, wraz z
+                przebudową wyjazdów z elektrowozowni na STP Kabaty I linii metra w Warszawie,</span><br>
+            <span class="lispan">Projekty metra od Kabat do stacji "Świętokrzyska” (stacje i tunele
+                szlakowe),</span><br>
+            <span class="lispan">Projekty tuneli szlakowych od stacji "Świętokrzyska" do stacji "Słodowiec" oraz od
+                stacji „Stare Bielany” do stacji „Młociny”,</span><br>
+            <span class="lispan">Projekty stacji I linii metra w Warszawie: "Pl. Wilsona", „Wawrzyszew” i „Młociny” wraz
+                z torami odstawczymi,</span><br>
+            <span class="lispan">Wielobranżowy projekt koncepcyjny II linii metra odc. centralny od Ronda Daszyńskiego
+                do Dworca Wileńskiego,</span><br>
             <span class="lispan">Raport o oddziaływaniu na środowisko dla II linii metra w Warszawie,</span><br>
-            <span class="lispan">Koncepcja Architektoniczno-Budowlana I etapu realizacji odcinka zachodniego II linii metra obejmującego stacje: „Księcia Janusza”, „Młynów”, „Płocka”,</span><br>
-            <span class="lispan">Projekty kompleksowej naprawy tunelu kolejowego średnicowego w Warszawie w układzie podmiejskim i dalekobieżnym,</span>
+            <span class="lispan">Koncepcja Architektoniczno-Budowlana I etapu realizacji odcinka zachodniego II linii
+                metra obejmującego stacje: „Księcia Janusza”, „Młynów”, „Płocka”,</span><br>
+            <span class="lispan">Projekty kompleksowej naprawy tunelu kolejowego średnicowego w Warszawie w układzie
+                podmiejskim i dalekobieżnym,</span>
         </p>
         <h2 class="h2left">Drogi i obiekty inżynierskie</h2>
         <p class="referencesp">
-            <span class="lispan">Projekty kilku obiektów Trasy Łazienkowskiej, Wisłostrady i Trasy Toruńskiej,</span><br>
+            <span class="lispan">Projekty kilku obiektów Trasy Łazienkowskiej, Wisłostrady i Trasy
+                Toruńskiej,</span><br>
             <span class="lispan">Projekty tunelu ciepłowniczego pod Wisłą,</span><br>
             <span class="lispan">Projekty przejść podziemnych w centralnej części miasta,</span><br>
-            <span class="lispan">Projekty parkingów podziemnych nad stacjami "Politechnika" i "Centrum" I linii metra w Warszawie,</span><br>
-            <span class="lispan">Projekty tunelu drogowego i przejścia podziemnego dla pieszych do centrum handlowego "Blue City" w Warszawie,</span><br>
+            <span class="lispan">Projekty parkingów podziemnych nad stacjami "Politechnika" i "Centrum" I linii metra w
+                Warszawie,</span><br>
+            <span class="lispan">Projekty tunelu drogowego i przejścia podziemnego dla pieszych do centrum handlowego
+                "Blue City" w Warszawie,</span><br>
             <span class="lispan">Projekty dla remontu tunelu drogowego i pieszego na Trasie W-Z w Warszawie,</span><br>
             <span class="lispan">Projekty Autostrady A2 na odcinku Dąbie-Wartkowice i Stryków I - Stryków II</span><br>
             <span class="lispan">Projekt modernizacji drogi wojewódzkiej nr 580 relacji Warszawa – Leszno</span><br>
-            <span class="lispan">Projekty kompleksowych przebudów ulic: al. Niepodległości, ul. Powstańców Śląskich, ul. Reymonta, ul. Górczewskiej z wiaduktem kolejowym i dwoma wiaduktami drogowymi nad linią kolejową, ul. Nowo-Wincentego, ul. Nowo-Trockiej, ul. Francuskiej i Paryskiej, ul. Płaskowickiej w Warszawie,</span><br>
+            <span class="lispan">Projekty kompleksowych przebudów ulic: al. Niepodległości, ul. Powstańców Śląskich, ul.
+                Reymonta, ul. Górczewskiej z wiaduktem kolejowym i dwoma wiaduktami drogowymi nad linią kolejową, ul.
+                Nowo-Wincentego, ul. Nowo-Trockiej, ul. Francuskiej i Paryskiej, ul. Płaskowickiej w
+                Warszawie,</span><br>
             <span class="lispan">Projekt linii tramwajowej Bemowo 2,</span><br>
-            <span class="lispan">Projekt przebudowy chodników wraz z wydzieleniem ścieżki rowerowej w Alejach Ujazdowskich na odc. ul. Belwederska - Plac Trzech Krzyży,</span><br>
-            <span class="lispan">Projekty organizacji ruchu i sygnalizacji świetlnych na wielu skrzyżowaniach w Warszawie,</span><br>
-            <span class="lispan">Aktualizacja projektu modernizacji drogi wojewódzkiej nr 724 relacji Warszawa – Góra Kalwaria,</span><br>
-            <span class="lispan">Projekt budowlany i projekt wykonawczy na wykonanie połączenia ulicy Dewajtis z Wisłostradą i zapewnienia miejsc postojowych przy Wisłostradzie,</span><br>
-            <span class="lispan">Projekt drugiej jezdni Al. KEN etap III na odc. ul. Przy Bażantarni - ul. Wąwozowa,</span><br>
-            <span class="lispan">Wielobranżowa dokumentacja dla potrzeb budowy tunelu drogowego pod torami kolejowymi w ciągu ulic Wojska Polskiego – Orla w Ząbkach,</span><br>
-            <span class="lispan">Projekt budowy drugiej jezdni ul. Kasprowicza na odc. ul. Oczapowskiego do ul. Przy Agorze w Warszawie.</span>
+            <span class="lispan">Projekt przebudowy chodników wraz z wydzieleniem ścieżki rowerowej w Alejach
+                Ujazdowskich na odc. ul. Belwederska - Plac Trzech Krzyży,</span><br>
+            <span class="lispan">Projekty organizacji ruchu i sygnalizacji świetlnych na wielu skrzyżowaniach w
+                Warszawie,</span><br>
+            <span class="lispan">Aktualizacja projektu modernizacji drogi wojewódzkiej nr 724 relacji Warszawa – Góra
+                Kalwaria,</span><br>
+            <span class="lispan">Projekt budowlany i projekt wykonawczy na wykonanie połączenia ulicy Dewajtis z
+                Wisłostradą i zapewnienia miejsc postojowych przy Wisłostradzie,</span><br>
+            <span class="lispan">Projekt drugiej jezdni Al. KEN etap III na odc. ul. Przy Bażantarni - ul.
+                Wąwozowa,</span><br>
+            <span class="lispan">Wielobranżowa dokumentacja dla potrzeb budowy tunelu drogowego pod torami kolejowymi w
+                ciągu ulic Wojska Polskiego – Orla w Ząbkach,</span><br>
+            <span class="lispan">Projekt budowy drugiej jezdni ul. Kasprowicza na odc. ul. Oczapowskiego do ul. Przy
+                Agorze w Warszawie.</span>
         </p>
         <h2 class="h2left">Obiekty kubaturowe</h2>
         <p class="referencesp">
             <span class="lispan">Projekt Szpital-Pomnik Centrum Zdrowia Dziecka,</span><br>
             <span class="lispan">Projekt biurowca Curtis Plaza,</span><br>
-            <span class="lispan">Projekty posadowienia budynków wielopoziomowych nad stacjami metra "Centrum" i 'Świętokrzyska",</span><br>
-            <span class="lispan">Inwestorstwo zastępcze dla realizacji budynku TP S.A. w Warszawie, ul. Twarda 14; obiekt 32-kondygnacyjny (w tym 5 kondygnacji podziemnych), ukończony.</span>
+            <span class="lispan">Projekty posadowienia budynków wielopoziomowych nad stacjami metra "Centrum" i
+                'Świętokrzyska",</span><br>
+            <span class="lispan">Inwestorstwo zastępcze dla realizacji budynku TP S.A. w Warszawie, ul. Twarda 14;
+                obiekt 32-kondygnacyjny (w tym 5 kondygnacji podziemnych), ukończony.</span>
         </p>
         <h2 class="h2left">Infrastruktura techniczna</h2>
         <p class="referencesp">
-            <span class="lispan">Projekty głównych kolektorów kanalizacyjnych i magistrali sieci wodociągowych,</span><br>
-            <span class="lispan">Projekt kolektora Ø 2,40 m, L = 1820 m w al. Prymasa Tysiąclecia w Warszawie metodą przewiertu,</span><br>
-            <span class="lispan">Projekty wodociągów w ul. Rajskich Ptaków, Minerskiej, Żuromińskiej, Boliwara, Św. Wincentego, Łochowskiej, Zabranieckiej - Matuszewskiej, Witkiewicza-Szernera, Majdańskiej, Ambaras, Białołęckiej, Małego Rycerza, Ketlinga, Różanej, Żeglarskiej i Rozszerzonej, Al. Wojska Polskiego, Popiełuszki, Krechowieckiej, Pl. Lelewela, Modrzejewskiej i Solskiego, Żeromskiego, Sadowskiej, Słodowiec, Gąbińskiej, Al. Jana Pawła, Kasprowicza, Czereśniowej, Suchodolskiej, Wyrzyskiej, Śląskiej, Tumskiej, Nike, Wałowickiej, Urszuli, Żeleńskiego, Rotundy, Fortuny, Jana Kazimierza, Dzierzby, Pereca, Dzielnej, Wolskiej, Łuckiej i inne,</span><br>
+            <span class="lispan">Projekty głównych kolektorów kanalizacyjnych i magistrali sieci
+                wodociągowych,</span><br>
+            <span class="lispan">Projekt kolektora Ø 2,40 m, L = 1820 m w al. Prymasa Tysiąclecia w Warszawie metodą
+                przewiertu,</span><br>
+            <span class="lispan">Projekty wodociągów w ul. Rajskich Ptaków, Minerskiej, Żuromińskiej, Boliwara, Św.
+                Wincentego, Łochowskiej, Zabranieckiej - Matuszewskiej, Witkiewicza-Szernera, Majdańskiej, Ambaras,
+                Białołęckiej, Małego Rycerza, Ketlinga, Różanej, Żeglarskiej i Rozszerzonej, Al. Wojska Polskiego,
+                Popiełuszki, Krechowieckiej, Pl. Lelewela, Modrzejewskiej i Solskiego, Żeromskiego, Sadowskiej,
+                Słodowiec, Gąbińskiej, Al. Jana Pawła, Kasprowicza, Czereśniowej, Suchodolskiej, Wyrzyskiej, Śląskiej,
+                Tumskiej, Nike, Wałowickiej, Urszuli, Żeleńskiego, Rotundy, Fortuny, Jana Kazimierza, Dzierzby, Pereca,
+                Dzielnej, Wolskiej, Łuckiej i inne,</span><br>
             <span class="lispan">Projekty kanałów sanitarnych w ul. Zapustnej, ul. Drwali i Cyrulików</span>
         </p>
     </section>
@@ -151,7 +194,7 @@
             </div>
         </div>
         <div class="footerCopyright">
-            Copyright © 2021 - Biuro Projektów "Metroprojekt" sp. z o.o.
+            Copyright © <span class="footerYear"></span> - Biuro Projektów "Metroprojekt" sp. z o.o.
         </div>
     </footer>
 
