--- a/oferty-pracy.html
+++ b/oferty-pracy.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Biuro Projektów Metroprojekt sp. z o.o. jest firmą z 70-letnią tradycją w projektowaniu obiektów kubaturowych, infrastruktury transportowej, instalacji i systemów kolejowych oraz metra. Świadczymy usługi projektowe dla inwestorów, wykonawców budowlanych oraz współpracujemy z innymi biurami projektowymi.">
+    <meta name="keywords" content="metroprojekt, metro, srk, sterowanie ruchem kolejowym">
     <!-- Page Icon -->
     <link rel="icon" href="./img/icon.jpg">
     <!-- External CSS -->
@@ -13,8 +15,10 @@
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600&display=swap" rel="stylesheet">
     <!-- Title -->
-    <title>Biuro Projektów Metroprojekt</title>
+    <title>Biuro Projektów Metroprojekt sp. z o.o.</title>
 </head>
 
 <body>
@@ -38,14 +42,21 @@
                 <li class="menuListFirstLine menuListDrop">
                     <a href="#" class="menuListItem expandList first">Oferta<i class="fas fa-angle-down"></i></a>
                     <ul class="menuListDrop-menu expand long">
-                        <li><a href="systemy-sterowania-ruchem-kolejowym.html" class="menuListItem">Systemy sterowania ruchem kolejowym</a></li>
-                        <li><a href="systemy-metra-i-szybkiego-tramwaju.html" class="menuListItem">Systemy metra i szybkiego tramwaju</a></li>
-                        <li><a href="infrastruktura-kolejowa-i-drogowa.html" class="menuListItem">Infrastruktura kolejowa i drogowa</a></li>
+                        <li><a href="systemy-sterowania-ruchem-kolejowym.html" class="menuListItem">Systemy sterowania
+                                ruchem kolejowym</a></li>
+                        <li><a href="systemy-metra-i-szybkiego-tramwaju.html" class="menuListItem">Systemy metra i
+                                szybkiego tramwaju</a></li>
+                        <li><a href="infrastruktura-kolejowa-i-drogowa.html" class="menuListItem">Infrastruktura
+                                kolejowa i drogowa</a></li>
                         <li><a href="uklady-komunikacyjne.html" class="menuListItem">Układy komunikacyjne</a></li>
-                        <li><a href="sieci-i-instalacje-wodnokanalizacyjne.html" class="menuListItem">Sieci i instalacje wodno-kanalizacyjne</a></li>
-                        <li><a href="konstrukcje-budowlane-i-inzynierskie.html" class="menuListItem">Konstrukcje budowlane i inżynierskie</a></li>
-                        <li><a href="sieci-i-instalacje-elektroenergetyczne.html" class="menuListItem">Sieci i instalacje elektroenergetyczne i automatyki przemysłowej</a></li>
-                        <li><a href="inwestorstwo-zastepcze-ekspertyzy.html" class="menuListItem">Inwestorstwo zastępcze, ekspertyzy i opinie techniczne</a></li>
+                        <li><a href="sieci-i-instalacje-wodnokanalizacyjne.html" class="menuListItem">Sieci i instalacje
+                                wodno-kanalizacyjne</a></li>
+                        <li><a href="konstrukcje-budowlane-i-inzynierskie.html" class="menuListItem">Konstrukcje
+                                budowlane i inżynierskie</a></li>
+                        <li><a href="sieci-i-instalacje-elektroenergetyczne.html" class="menuListItem">Sieci i
+                                instalacje elektroenergetyczne i automatyki przemysłowej</a></li>
+                        <li><a href="inwestorstwo-zastepcze-ekspertyzy.html" class="menuListItem">Inwestorstwo
+                                zastępcze, ekspertyzy i opinie techniczne</a></li>
                     </ul>
                 </li>
                 <!-- Nav list - References -->
@@ -57,11 +68,13 @@
                     <a href="#" class="menuListItem expandList first">Współpraca<i class="fas fa-angle-down"></i></a>
                     <ul class="menuListDrop-menu expand">
                         <li class="menuListDrop menuListDrop-right">
-                            <a href="#" class="menuListItem expandList">Nasi partnerzy<i class="fas fa-angle-right"></i></a>
+                            <a href="#" class="menuListItem expandList">Nasi partnerzy<i
+                                    class="fas fa-angle-right"></i></a>
                             <ul class="menuListRight expand">
                                 <li><a href="nasi-klienci.html" class="menuListItem">Nasi klienci</a></li>
                                 <li><a href="kontrahenci.html" class="menuListItem">Kontrahenci</a></li>
-                                <li><a href="jednostki-naukowo-badawcze.html" class="menuListItem">Jednostki naukowo-badawcze</a></li>
+                                <li><a href="jednostki-naukowo-badawcze.html" class="menuListItem">Jednostki
+                                        naukowo-badawcze</a></li>
                             </ul>
                         </li>
                         <li><a href="mozliwosci-wspolpracy.html" class="menuListItem">Możliwości współpracy</a></li>
@@ -92,9 +105,50 @@
     <section class="whiteSection" id="firstId">
         <h1 class="h1left">Aktualne oferty pracy</h1>
         <div class="text_margin_Section">
-            <p class="text_Section_p">
-                Brak aktualnych ofert pracy – Zapraszamy w późniejszym terminie.
-            </p>
+            <div class="career_section">
+                <div class="career-img">
+                    <img src="./img/20210326_BPM-69.png" alt="" width="140px">
+                </div>
+                <div class="career-desc">
+                    <p>Asystent projektanta instalacji HVAC [Warszawa]</p>
+                </div>
+                <div class="career-btn">
+                    <a class="button02 job-btn" target="_blank" href="./pdf/20230724_Ogloszenie_o_prace_Asystent_HVAC__PW01.pdf">Zobacz ofertę</a>
+                </div>
+            </div>
+            <div class="career_section">
+                <div class="career-img">
+                    <img src="./img/20210326_BPM-69.png" alt="" width="140px">
+                </div>
+                <div class="career-desc">
+                    <p>Asystent projektanta sterowania ruchem kolejowym [Katowice, Warszawa]</p>
+                </div>
+                <div class="career-btn">
+                    <a class="button02 job-btn" target="_blank" href="./pdf/20230428_Ogloszenie_o_prace_Asystent_srk_Katowice_Warszawa_PW01.pdf">Zobacz ofertę</a>
+                </div>
+            </div>
+            <div class="career_section">
+                <div class="career-img">
+                    <img src="./img/20210326_BPM-69.png" alt="" width="140px">
+                </div>
+                <div class="career-desc">
+                    <p>Asystent projektanta branży teletechnicznej [Katowice]</p>
+                </div>
+                <div class="career-btn">
+                    <a class="button02 job-btn" target="_blank" href="./pdf/20230428_Ogloszenie_o_prace_Asystent_teletechnika_Katowice__PW01.pdf">Zobacz ofertę</a>
+                </div>
+            </div>
+            <div class="career_section">
+                <div class="career-img">
+                    <img src="./img/20210326_BPM-69.png" alt="" width="140px">
+                </div>
+                <div class="career-desc">
+                    <p>Specjalista ds. obsługi administracyjnej projektów [Warszawa]</p>
+                </div>
+                <div class="career-btn">
+                    <a class="button02 job-btn" target="_blank" href="./pdf/230312_Ogloszenie_o_prace_Specjalista_ds_obsługi_administracyjnej_projektu__PW01.pdf">Zobacz ofertę</a>
+                </div>
+            </div>
         </div>
     </section>
 
@@ -111,7 +165,7 @@
             </div>
         </div>
         <div class="footerCopyright">
-            Copyright © 2021 - Biuro Projektów "Metroprojekt" sp. z o.o.
+            Copyright © <span class="footerYear"></span> - Biuro Projektów "Metroprojekt" sp. z o.o.
         </div>
     </footer>
 
